--- a/GoFish/GoFish/GoFish.csproj
+++ b/GoFish/GoFish/GoFish.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Game.cs" />
     <Compile Include="Initialize.cs" />
+    <Compile Include="Players.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startmenu.cs" />
