--- a/GoFish/PlayerLibrary/PlayerLibrary.csproj
+++ b/GoFish/PlayerLibrary/PlayerLibrary.csproj
@@ -40,7 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Player.cs" />
+    <Compile Include="BasePlayer.cs" />
+    <Compile Include="PlayerController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
