--- a/GoFish/ConsoleGame/ConsoleGame.csproj
+++ b/GoFish/ConsoleGame/ConsoleGame.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="ConsoleStartmenu.cs" />
     <Compile Include="ConsoleGameController.cs" />
+    <Compile Include="Menu.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
