--- a/GoFish/CardLibrary/CardLibrary.csproj
+++ b/GoFish/CardLibrary/CardLibrary.csproj
@@ -41,7 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Card.cs" />
-    <Compile Include="Deck.cs" />
+    <Compile Include="CardController.cs" />
     <Compile Include="Suits.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Values.cs" />
