Hardcoded the beginning of the players being able to play the game

--- a/GoFish/PlayerLibrary/PlayerLibrary.csproj
+++ b/GoFish/PlayerLibrary/PlayerLibrary.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BasePlayer.cs" />
+    <Compile Include="Delegates.cs" />
     <Compile Include="Player1.cs" />
     <Compile Include="Player2.cs" />
     <Compile Include="Player3.cs" />
