--- a/GoFish/PlayerLibrary/PlayerLibrary.csproj
+++ b/GoFish/PlayerLibrary/PlayerLibrary.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="BasePlayer.cs" />
     <Compile Include="Delegates.cs" />
+    <Compile Include="HumanPlayer.cs" />
     <Compile Include="Player1.cs" />
     <Compile Include="Player2.cs" />
     <Compile Include="Player3.cs" />
