--- a/GoFish/Interfaces/Interfaces.csproj
+++ b/GoFish/Interfaces/Interfaces.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{781E0728-C9EF-4594-A6DF-82D209E2EC38}</ProjectGuid>
+    <ProjectGuid>{9F76212C-435C-4B14-8C64-16D48BFF93AE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ConsoleGame</RootNamespace>
-    <AssemblyName>ConsoleGame</AssemblyName>
+    <RootNamespace>Interfaces</RootNamespace>
+    <AssemblyName>Interfaces</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,24 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConsoleStartmenu.cs" />
-    <Compile Include="ConsoleGameController.cs" />
-    <Compile Include="ConsoleViewModel.cs" />
-    <Compile Include="Menu.cs" />
+    <Compile Include="IGenericViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\CardLibrary\CardLibrary.csproj">
-      <Project>{72BC700B-E6AC-4F64-8DA7-2823D78E5047}</Project>
-      <Name>CardLibrary</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\PlayerLibrary\PlayerLibrary.csproj">
-      <Project>{DB4B310E-9908-4F12-ABA5-CE4977C0A39E}</Project>
-      <Name>PlayerLibrary</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="ReadMe.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
