--- a/GoFish/ConsoleGame/ConsoleGame.csproj
+++ b/GoFish/ConsoleGame/ConsoleGame.csproj
@@ -51,6 +51,10 @@
       <Project>{72BC700B-E6AC-4F64-8DA7-2823D78E5047}</Project>
       <Name>CardLibrary</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Interfaces\Interfaces.csproj">
+      <Project>{9F76212C-435C-4B14-8C64-16D48BFF93AE}</Project>
+      <Name>Interfaces</Name>
+    </ProjectReference>
     <ProjectReference Include="..\PlayerLibrary\PlayerLibrary.csproj">
       <Project>{DB4B310E-9908-4F12-ABA5-CE4977C0A39E}</Project>
       <Name>PlayerLibrary</Name>
