--- a/GoFish/PlayerLibrary.Tests/PlayerLibrary.Tests.csproj
+++ b/GoFish/PlayerLibrary.Tests/PlayerLibrary.Tests.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DummyViewModel.cs" />
     <Compile Include="PlayerControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PlayerTests.cs" />
@@ -61,6 +62,10 @@
     <ProjectReference Include="..\CardLibrary\CardLibrary.csproj">
       <Project>{72BC700B-E6AC-4F64-8DA7-2823D78E5047}</Project>
       <Name>CardLibrary</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Interfaces\Interfaces.csproj">
+      <Project>{9F76212C-435C-4B14-8C64-16D48BFF93AE}</Project>
+      <Name>Interfaces</Name>
     </ProjectReference>
     <ProjectReference Include="..\PlayerLibrary\PlayerLibrary.csproj">
       <Project>{db4b310e-9908-4f12-aba5-ce4977c0a39e}</Project>
