--- a/GoFish/CardLibrary.Tests/CardLibrary.Tests.csproj
+++ b/GoFish/CardLibrary.Tests/CardLibrary.Tests.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{E7B665FC-E261-4309-AB5F-259849D0F1D6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CardLibraryTests</RootNamespace>
-    <AssemblyName>CardLibraryTests</AssemblyName>
+    <RootNamespace>CardLibrary.Tests</RootNamespace>
+    <AssemblyName>CardLibrary.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
