--- a/GoFish/GameLibrary/GameLibrary.csproj
+++ b/GoFish/GameLibrary/GameLibrary.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A9BA86EC-B8D7-42E8-99E2-0276B5231274}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>GoFish</RootNamespace>
-    <AssemblyName>GoFish</AssemblyName>
+    <ProjectGuid>{781E0728-C9EF-4594-A6DF-82D209E2EC38}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>GameLibrary</RootNamespace>
+    <AssemblyName>GameLibrary</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -42,23 +40,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConsoleStartmenu.cs" />
-    <Compile Include="ConsoleViewModel.cs" />
-    <Compile Include="Menu.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="GameController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CardLibrary\CardLibrary.csproj">
       <Project>{72BC700B-E6AC-4F64-8DA7-2823D78E5047}</Project>
       <Name>CardLibrary</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\GameLibrary\GameLibrary.csproj">
-      <Project>{781E0728-C9EF-4594-A6DF-82D209E2EC38}</Project>
-      <Name>GameLibrary</Name>
     </ProjectReference>
     <ProjectReference Include="..\Interfaces\Interfaces.csproj">
       <Project>{9F76212C-435C-4B14-8C64-16D48BFF93AE}</Project>
